@@ -1,5 +1,6 @@
 package de.hype.bbsentials.forge;
 
+import java.util.Collections;
 import java.util.List;
 
 public class DebugThread implements de.hype.bbsentials.common.client.DebugThread {
@@ -10,6 +11,6 @@ public class DebugThread implements de.hype.bbsentials.common.client.DebugThread
 
     @Override
     public List<String> test() {
-        return List.of("");
+        return Collections.singletonList("");
     }
 }
